@@ -117,6 +117,10 @@ To make predicates easier to read and write, the following properties are availa
 * `env` A map of all environment variables
 * `os` Information about the operating system (see `spock.util.environment.OperatingSystem`)
 * `jvm` Information about the JVM (see `spock.util.environment.Jvm`)
+* `instance` The specification instance if instance fields, shared fields or instance methods are needed.
+  If this property is used, the whole annotated element cannot be skipped up-front without executing fixtures,
+  data providers and similar. Instead the whole workflow is followed up to the feature method invocation,
+  where then the closure is checked and it is decided whether to abort the specific iteration or not.
 
 Using the `os` property, the previous example can be rewritten as:
 
