@@ -25,8 +25,7 @@ import org.spockframework.runtime.GroovyRuntimeUtil;
 
 public abstract class MopUtil {
   private static final Field ReflectionMetaMethod_method  = getDeclaredField(ReflectionMetaMethod.class, "method");
-  private static final Field CachedField_field = GroovyRuntimeUtil.isGroovy2() ? getDeclaredField(CachedField.class, "field") :
-    getDeclaredField(CachedField.class, "cachedField");
+  private static final Field CachedField_field = getDeclaredField(CachedField.class, "field");
 
   private static Field getDeclaredField(Class clazz, String name) {
     try {
