@@ -28,6 +28,9 @@ include::include.adoc[]
 
 - Fix https://github.com/spockframework/spock/issues/994[#994] nested closures in argument constraints are not treated as implicit assertions anymore
 
+- `@Requires`, `@IgnoreIf` and `@PendingFeatureIf` can now access instance fields, shared fields and instance methods
+  by using the `instance.` qualifier inside the condition closure.
+
 
 == 2.0-M3 (2020-06-11)
 
